--- a/templates/states/templates/index.html
+++ b/templates/states/templates/index.html
@@ -23,5 +23,6 @@
     {{ state_form.as_p }}
     <input type="submit" Add State>
   </form>
+  <h2>I too want to be able to contribute</h2>
 </body>
 </html>
